[package]
name = "ansine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = "0.6.6"
mime_guess = "2.0.4"
nom = "7.1.3"
rust-embed = { version = "6.4.2", features = [ "axum" ] }
tokio = { version = "1.25.0", features = [ "full" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
